--- a/src/Form.scss
+++ b/src/Form.scss
@@ -41,14 +41,14 @@ input::placeholder {
   color: #bbbbbb;
 }
 .address {
-  background: url(./fotoLogin/user.png) no-repeat scroll 10px 10px;
-  padding-left: 40px;
+  background: url(./fotoLogin/usersmall.png) no-repeat scroll 10px 10px;
+  padding-left: 45px;
   font-size: 18px;
 }
 
 .password {
   background: url(./fotoLogin/passwordbig.png) no-repeat scroll 10px 10px;
-  padding-left: 42px;
+  padding-left: 47px;
   font-size: 18px;
 }
 
