--- a/src/Form.scss
+++ b/src/Form.scss
@@ -36,6 +36,7 @@ input {
   border-radius: 5px;
   border: 1px solid rgb(192, 192, 192);
   outline: none;
+  align-self: center;
 }
 input::placeholder {
   color: #bbbbbb;
